Refactor to separate unified/non-unified logging events.